crates/cli/tests/snapshots/run_test__system__handles_echo.snap
---
source: crates/cli/tests/run_test.rs
assertion_line: 319
expression: get_assert_output(&assert)
---
▪▪▪▪ system:echo
hello

Tasks: 1 completed
 Time: 100ms



