crates/cli/tests/snapshots/run_test__system__handles_ls.snap
---
source: crates/cli/tests/run_test.rs
assertion_line: 738
expression: get_assert_output(&assert)
---
▪▪▪▪ system:ls
bash.sh
cwd.sh
envVars.sh
envVarsMoon.sh
exitNonZero.sh
exitZero.sh
passthroughArgs.sh
project.yml

Tasks: 1 completed
 Time: 100ms


