crates/cli/tests/snapshots/run_test__system__handles_ls_from_root.snap
---
source: crates/cli/tests/run_test.rs
assertion_line: 714
expression: get_assert_output(&assert)
---
▪▪▪▪ system:lsRoot
base
depends-on
deps-a
deps-b
deps-c
node
node_modules
package-lock.json
package.json
system
target-scope-a
target-scope-b
target-scope-c
tsconfig.json

Tasks: 1 completed
 Time: 100ms


