crates/cli/tests/snapshots/run_test__system__handles_process_exit_nonzero.snap
---
source: crates/cli/tests/run_test.rs
assertion_line: 423
expression: get_assert_output(&assert)
---
▪▪▪▪ system:exitNonZero
stdout
stderr
▪▪▪▪ system:exitNonZero (100ms)

 ERROR  Process bash failed with a 1 exit code.



