crates/cli/tests/snapshots/run_test__system__handles_process_exit_zero.snap
---
source: crates/cli/tests/run_test.rs
assertion_line: 355
expression: get_assert_output(&assert)
---
▪▪▪▪ system:exitZero
stdout

Tasks: 1 completed
 Time: 100ms

stderr


