crates/cli/tests/snapshots/run_test__system__passes_args_through.snap
---
source: crates/cli/tests/run_test.rs
assertion_line: 444
expression: get_assert_output(&assert)
---
▪▪▪▪ system:passthroughArgs
-aBc --opt value --optCamel=value foo 'bar baz' --opt-kebab 123

Tasks: 1 completed
 Time: 100ms



