crates/cli/tests/snapshots/run_test__system__runs_bash_script.snap
---
source: crates/cli/tests/run_test.rs
assertion_line: 148
expression: get_assert_output(&assert)
---
▪▪▪▪ system:bash
stdout

Tasks: 1 completed
 Time: 100ms

stderr

