crates/cli/tests/snapshots/run_test__system__runs_from_project_root.snap
---
source: crates/cli/tests/run_test.rs
assertion_line: 907
expression: "get_path_safe_output(&assert, fixture.path())"
---
▪▪▪▪ npm install
▪▪▪▪ system:runFromProject
<WORKSPACE>/system

Tasks: 1 completed
 Time: 100ms


