crates/cli/tests/snapshots/run_test__system__runs_from_workspace_root.snap
---
source: crates/cli/tests/run_test.rs
assertion_line: 919
expression: "get_path_safe_output(&assert, fixture.path())"
---
▪▪▪▪ npm install
▪▪▪▪ system:runFromWorkspace
<WORKSPACE>

Tasks: 1 completed
 Time: 100ms


