crates/cli/tests/snapshots/run_test__system__sets_env_vars.snap
---
source: crates/cli/tests/run_test.rs
assertion_line: 456
expression: get_assert_output(&assert)
---
▪▪▪▪ system:envVars
MOON_FOO=abc
MOON_BAR=123
MOON_BAZ=true

Tasks: 1 completed
 Time: 100ms



